# Solar-Tracer

./: .gitmodules  README.md
3d/: 2814300907JGY-370编码器.STEP  U型板.SLDPRT  U型板.STEP  imu固定板.SLDPRT  imu固定板.STEP  imu盖板.SLDPRT  imu盖板.STEP  pcb支架.SLDPRT  pcb支架.STEP  上壳.SLDPRT  上壳.STEP  中间壳.SLDPRT  坐标系.SLDPRT  太阳指向盘.SLDPRT  太阳指向盘.STEP  底座.SLDPRT  底座.STEP  底板.SLDPRT  底板.STEP  法兰.SLDPRT  装配体1.SLDASM  轴套.SLDPRT  轴套.STEP
firmware/: .gitignore  CMakeLists.txt  Makefile  partitions.csv  partitions_4mb_optimised.csv  sdkconfig.defaults  test.py
firmware/components/app_network/: CMakeLists.txt  app_network.c
firmware/components/app_reset/: app_reset.c  app_reset.h
firmware/components/qrcode/: CMakeLists.txt  README.md  component.mk
firmware/components/qrcode/src/: esp_qrcode_main.c  esp_qrcode_wrapper.c  qrcodegen.c  qrcodegen.h
firmware/front/web-demo/: dev-server.js  index.html  package.json  vite.config.js
firmware/front/web-demo/src/: App.vue  main.js  store.js
firmware/front/web-demo/src/components/: LineChart.vue
firmware/front/web-demo/src/plugins/: vuetify.js
firmware/front/web-demo/src/router/: index.js
firmware/front/web-demo/src/stores/: solarStore.js
firmware/front/web-demo/src/utils/: typeConversion.ts
firmware/main/: CMakeLists.txt  Kconfig.projbuild  adc.c  adc.h  app_driver.c  app_main.c  app_main.cpp  app_priv.h  board.c  board.h  component.mk  esp_rest_main.c  helper.c  helper.h  idf_component.yml  led.c  led.h  motor.c  motor.h  observer.hpp  rest_server.c  rest_server.cpp  rest_server.h  setting.cpp  setting.h
firmware/main/gimbal/: gimbal.cpp  gimbal.h  imu.cpp  imu.h  light_reflection.hpp  matrix.cpp  matrix.h  motor.cpp  motor.h  observer.hpp  pid.c  pid.h  sun_pos.cpp  sun_pos.h
firmware/main/imu/: app_datafusion.c  app_datafusion.cpp  app_datafusion.h  imu_base.h  imu_bmi270.cpp  imu_bmi270.h  qmc5883p.cpp  qmc5883p.h
firmware/main/imu/MahonyAHRS/: MahonyAHRS.h
firmware/main/nmea0183/: gps.cpp  gps.h  nmea_parser.c  nmea_parser.h
firmware/main/wifi/: rest_server.cpp  rest_server.h  web.cpp  web.h
firmware/main/wit_imu/: main.c  wit_c_sdk.c
firmware/main/ws2812_panel/: color.h  led_gen.py  led_loc_map.h  lv_port.c  paint.c  paint.h  ws2812_led.c  ws2812_led.h
firmware/main/ws2812_panel/font/: font_arial_70.c  font_arial_80.c  fonts.h
hardware/: .gitignore  Power.kicad_sch  README.md  fp-lib-table  imu.kicad_sch  motor.kicad_sch  solar_tracer.kicad_pcb  solar_tracer.kicad_pro  solar_tracer.kicad_sch  sym-lib-table
hardware/bom/: ibom.html
hardware/jlcpcb/: project.db
hardware/jlcpcb/gerber/: solar_tracer-CuBottom.gbr  solar_tracer-CuTop.gbr  solar_tracer-EdgeCuts.gbr  solar_tracer-MaskBottom.gbr  solar_tracer-MaskTop.gbr  solar_tracer-NPTH.drl  solar_tracer-PTH.drl  solar_tracer-PasteBottom.gbr  solar_tracer-PasteTop.gbr  solar_tracer-SilkBottom.gbr  solar_tracer-SilkTop.gbr  solar_tracer-VScore.gbr
hardware/jlcpcb/production_files/: BOM-solar_tracer.csv  CPL-solar_tracer.csv
(+4 files in other folders)
