
file(GLOB_RECURSE SOURCES "${CMAKE_CURRENT_LIST_DIR}/*.c")
file(GLOB_RECURSE CPP_SOURCES "${CMAKE_CURRENT_LIST_DIR}/*.cpp")

idf_component_register(SRCS 
    ${SOURCES} ${CPP_SOURCES}
    
    INCLUDE_DIRS . wit_imu nmea0183 gimbal
)

target_compile_options(${COMPONENT_LIB} PRIVATE -Wno-format)
